# mseedindex

./: .gitignore  ChangeLog  Makefile  README  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
doc/: database-schema.txt  mseedindex.1  mseedindex.md  mseedsyncdb.1
extra/: fetchIndexInfo.py
libmseed/: genutils.c
python/: README.md  __main__.py  hatch_build_mseedindex.py
src/: Makefile  Makefile.win  asprintf.c  asprintf.h  md5.c  md5.h  mseedindex.c  mseedsyncdb.c
